[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Gothicvania/Background/NightTownParallax/night-town-background-previewx1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Flags/brazil.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Flags/usa.png" type="Texture" id=3]
[ext_resource path="res://Script/Menus/MainMenu.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
anti_aliasing = false

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Font/PixelOperator.ttf"

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
antialiased = false
font_path = "res://Font/PixelOperator.ttf"

[sub_resource type="DynamicFont" id=5]
font_data = SubResource( 4 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 16, 12 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 16, 12 )

[sub_resource type="StyleBoxFlat" id=8]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 16, 12 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 16, 12 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 16, 12 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 16, 12 )

[sub_resource type="Animation" id=13]
length = 6.0

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -82.0
margin_right = 52.0
margin_bottom = 82.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Bg/VBoxContainer"]
margin_top = 39.0
margin_right = 104.0
margin_bottom = 77.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Play"
flat = true

[node name="Exit" type="Button" parent="Bg/VBoxContainer"]
margin_top = 87.0
margin_right = 104.0
margin_bottom = 125.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Exit"
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Bg"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -107.0
margin_top = -67.0
margin_right = -21.0
margin_bottom = -27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Bg/VBoxContainer2"]
margin_right = 86.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 5 )
text = "Language"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Bg/VBoxContainer2"]
margin_top = 20.0
margin_right = 86.0
margin_bottom = 44.0
alignment = 1

[node name="Brazil" type="Button" parent="Bg/VBoxContainer2/HBoxContainer"]
margin_left = 9.0
margin_right = 41.0
margin_bottom = 24.0
rect_min_size = Vector2( 32, 24 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )

[node name="Usa" type="Button" parent="Bg/VBoxContainer2/HBoxContainer"]
margin_left = 45.0
margin_right = 77.0
margin_bottom = 24.0
rect_min_size = Vector2( 32, 24 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.8, 0.62 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/Intro = SubResource( 13 )
[connection signal="pressed" from="Bg/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Bg/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Bg/VBoxContainer2/HBoxContainer/Brazil" to="." method="_on_Brazil_pressed"]
[connection signal="pressed" from="Bg/VBoxContainer2/HBoxContainer/Usa" to="." method="_on_Usa_pressed"]
